tests/baselines/reference/incompleteDottedExpressionAtEOF.errors.txt
incompleteDottedExpressionAtEOF.ts(2,17): error TS1003: Identifier expected.


==== incompleteDottedExpressionAtEOF.ts (1 errors) ====
    // used to leak __missing into error message
    var p2 = window. 
                    
!!! error TS1003: Identifier expected.